append the cool coverpage

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: '',
-      repo: '',
-      loadSidebar: true
+      name: 'Panduza',
+      repo: 'https://github.com/Panduza',
+      coverpage: true,
+      loadSidebar: true,
+      // logo: '_media/logo.svg'
     }
   </script>
   <!-- Docsify v4 -->
