Append documentation for ql355p and hm310t

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       repo: 'https://github.com/Panduza',
       coverpage: true,
       loadSidebar: true,
-      // logo: '_media/logo.svg'
+      logo: '_media/logo.svg'
     }
   </script>
   <!-- Docsify v4 -->
