--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       loadSidebar: true,
       subMaxLevel: 3,
       logo: '_media/logo.svg',
-      ga: 'G-QCRNX39QKH',
+      ga: 'G-MREY8VJH56',
     }
   </script>
 
