--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       coverpage: true,
       loadSidebar: true,
       subMaxLevel: 3,
-      logo: '_media/logo.svg'
+      logo: '_media/logo.svg',
+      ga: 'G-MREY8VJH56',
     }
   </script>
 
@@ -39,6 +40,7 @@
   <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-python.min.js"></script>
   <!-- Plugin for sidebar collapse -->
   <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
-
+  <!-- Plugin for GA4 -->
+  <script src="//cdn.jsdelivr.net/npm/docsify-plugin-ga"></script>
 </body>
 </html>
